<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/product_name" />

        <EditText
            android:id="@+id/in_product_name"
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/product_name_hint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/product_price" />

        <EditText
            android:id="@+id/in_product_price"
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/product_price_hint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/quantity" />

        <EditText
            android:id="@+id/in_quantity"
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/quantity_hint"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/supplier_name" />

        <EditText
            android:id="@+id/in_supplier_name"
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/supplier_name_hint"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/supplier_number" />

        <EditText
            android:id="@+id/in_supplier_number"
            android:layout_width="@dimen/margin0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/supplier_number_hint"
            android:inputType="phone"
            android:maxLength="10" />
    </LinearLayout>


</LinearLayout>